--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,5 +71,5 @@ jobs:
         uses: soltys/publish-docker-compose@v1.0.0
         with:
           version: 'latest'
-          docker_compose: 'compose-github.yml'
+          docker_compose: 'compose.yml'
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
